# devclean

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  PRIVACY.md  README.md  RELEASE_NOTES.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  devclean.example.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: ci.yml  release-vscode.yml  release.yml  security.yml
apps/macos/: .swift-format  Package.resolved  Package.swift  README.md
apps/macos/Resources/: AppIcon.icns  Info.plist
apps/macos/Sources/DevcleanMenuBar/: DevcleanMenuBarApp.swift
apps/macos/Sources/DevcleanMenuBarKit/: AIInsights.swift  AIProviderSettings.swift  Analytics.swift  AppModel.swift  AppModelState.swift  CandidateRows.swift  DefaultScanLocations.swift  DevProcessSampler.swift  DevcleanClient.swift  FinderActions.swift  LaunchAtLogin.swift  LearningStore.swift  MemoryMonitor.swift  MenuContentAI.swift  MenuContentActions.swift  MenuContentCleanupConfirmation.swift  MenuContentMemory.swift  MenuContentModals.swift  MenuContentSections.swift  MenuState.swift  Models.swift  OpenAICompatibleAI.swift  Preferences.swift  ReportCache.swift  SafetyHoldRow.swift  ScanNotifications.swift  SettingsView.swift  SettingsWindowFocus.swift  UIFormatting.swift  Views.swift
apps/macos/Tests/DevcleanMenuBarKitTests/: DevcleanMenuBarKitTests.swift
apps/macos/scripts/: build-app.sh  generate-app-icon.swift
docs/: ARCHITECTURE.md  DISTRIBUTION.md  OBSERVABILITY.md  PERFORMANCE.md  RELEASING.md  SAFETY.md
editors/vscode/: .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: commands.test.ts  commands.ts  extension.ts
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_filters.rs
scripts/: benchmark.sh  test-release-tag-policy.sh  validate-release-tag.sh
skills/dev-disk-cleaner/: SKILL.md
skills/dev-disk-cleaner/agents/: openai.yaml
skills/dev-disk-cleaner/references/: policy.md
skills/dev-disk-cleaner/scripts/: devclean
src/: analysis.rs  cleaner.rs  config.rs  docker.rs  history.rs  lib.rs  main.rs  model.rs  policy.rs  quarantine.rs  render.rs  scanner.rs  workspace.rs
src/cli/: analyze.rs  clean.rs  config_command.rs  doctor.rs  init.rs  mod.rs  quarantine.rs  scan.rs  schedule.rs  stats.rs  tui.rs  watch.rs
src/scanner/: classifier.rs  global_caches.rs  measurement.rs  roots.rs
templates/: scan-report.html  stats-report.html
tests/: cli.rs
