[package]
name = "devclean"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Audit and safely remove rebuildable development artifacts"
license = "MIT"
authors = ["Lê Anh Tuấn"]
repository = "https://github.com/tuanle96/devclean"
homepage = "https://github.com/tuanle96/devclean"
readme = "README.md"
keywords = ["disk-cleanup", "developer-tools", "cli", "docker", "rust"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.20"

[lints.rust]
unsafe_code = "forbid"
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }

[lints.clippy]
all = { level = "deny", priority = 10 }
pedantic = { level = "warn", priority = 5 }

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
