[package]
name = "devclean-cli"
version = "0.3.1"
edition = "2024"
rust-version = "1.85"
description = "Audit and safely remove rebuildable development artifacts"
license = "MIT"
authors = ["Lê Anh Tuấn"]
repository = "https://github.com/tuanle96/devclean"
homepage = "https://github.com/tuanle96/devclean"
readme = "README.md"
keywords = ["disk-cleanup", "developer-tools", "cli", "docker", "rust"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["apps/**", "fuzz/**", "scripts/benchmark.sh"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
clap_complete = "4.5"
clap_mangen = "0.2"
directories = "6.0"
fs2 = "0.4"
globset = "0.4"
humantime = "2.1"
parse-size = "1.1"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
proptest = "1.6"
tempfile = "3.20"

[lib]
name = "devclean"

[[bin]]
name = "devclean"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }

[lints.clippy]
all = { level = "deny", priority = 10 }
pedantic = { level = "warn", priority = 5 }

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
